fixed wraped text

--- a/style.css
+++ b/style.css
@@ -54,6 +54,6 @@ nav .navbar-nav li a{
   color: black !important;
   }
 
-.col-sm-7 {
+.col-md-7 {
     float: left;
   }
